syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.search.server.grpc";
option java_outer_classname = "SqlServerProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting server definition.
service GetDataBySql {
    // Sends a greeting
    rpc getDataBySql (SqlRequest) returns (ServerReply) {}
}

//todo 缺少是否使用缓存，是否允许数据缓存
// The request message containing the user's name.
message SqlRequest {
    string name = 1;
    string token = 2;
    string sql = 3;
}

// The response message containing the greetings
message ServerReply {
    int32 messagecode = 1;
    string message = 2;
}